--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Start git</h1>
     <h2>Add new tag</h2>
-    
+    <h3>First git repos</h3>
     
     <script src="index.js"></script>
 </body>
