create new branch

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <h1>Start git</h1>
     <h2>Add new tag</h2>
     <h3>First git repos</h3>
+
+    <ul>
+        <li>git</li>
+        <li>gulp</li>
+        <li>oop</li>
+        <li>regExp</li>
+        <li>xmlHTTPrequest</li>
+        <li>callback, promise</li>
+    </ul>
     
     <script src="index.js"></script>
 </body>
