--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <li>xmlHTTPrequest</li>
         <li>callback, promise</li>
     </ul>
+
+    <h1>Merge complete</h1>
     
     <script src="index.js"></script>
 </body>
